Change image format from JPEG to PNG in settings

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ function ZIRME() {
   const [files,    setFiles]    = useState([]);
   const [selId,    setSelId]    = useState(null);
   const [editId,   setEditId]   = useState(null);
-  const [settings, setSettings] = useState({w:1024,h:1024,mode:"fill",fmt:"jpeg",quality:92});
+  const [settings, setSettings] = useState({w:1024,h:1024,mode:"fill",fmt:"png",quality:92});
   const [blurCfg,  setBlurCfg]  = useState({size:60,strength:12,hardness:30,opacity:85});
   const [zipping,  setZipping]  = useState(false);
   const [tick,     setTick]     = useState(0);
